Add lab controller in lab group

--- a/inventory/inventory.yml
+++ b/inventory/inventory.yml
@@ -3,3 +3,8 @@ all:
     az-workstation:
       ansible_host: localhost
       ansible_connection: local
+  children:
+    ansible-lab:
+      hosts:
+        ansible-lab-controller:
+          ansible_host: 10.1.1.4
