--- a/configuration.yml
+++ b/configuration.yml
@@ -3,6 +3,7 @@
   hosts: ansible-lab-controller
   tasks:
   - name: Ensure latest Ansible version
+    become: yes
     ansible.builtin.package:
       name: 
       - ansible
