--- a/configuration.yml
+++ b/configuration.yml
@@ -21,7 +21,14 @@
       security_password_max_lifetime_days: 90
 - name: Configure DNS server
   hosts: ansible-lab-host1
+  vars:
+    ansible_become: true
   tasks:
+  - name: disable existing dns
+    ansible.builtin.package:
+      name: system-resolved
+      state: stopped
+  - name: install dnsmasq
     ansible.builtin.package:
       name: dnsmasq
       state: latest
