--- a/inventory/inventory.yml
+++ b/inventory/inventory.yml
@@ -3,14 +3,14 @@ all:
     az-workstation:
       ansible_host: localhost
       ansible_connection: local
-    ansible-lab-controller:
+    ansible-lab-controller-with-cool-name:
       ansible_host: 10.1.1.4
   children:
     ansible_lab_hosts:
       hosts:
-        ansible_lab_host1:
+        ansible_lab_host-with-cool-name1:
           ansible_host: 10.1.2.4
-        ansible_lab_host2:
+        ansible_lab_host-with-cool-name2:
           ansible_host: 10.1.2.5
-        ansible_lab_host3:
+        ansible_lab_host-with-cool-name3:
           ansible_host: 10.1.2.6
