--- a/inventory/host_vars/az-workstation/main.yml
+++ b/inventory/host_vars/az-workstation/main.yml
@@ -5,9 +5,9 @@ resourcegroup_name: ansible-lab
 network_name: ansible-lab-net
 controller_nsg_name: ansible-controller-security
 controller_subnet_name: ansible-controller-subnet
-controller_vm_name: ansible-lab-controller-with-cool-name
+controller_vm_name: ansible-lab-controller
 host_subnet_name: ansible-host-subnet
 host_nsg_name: ansible-host-security
-host_vm_name1: ansible-lab-host-with-cool-name1
-host_vm_name2: ansible-lab-host-with-cool-name2
-host_vm_name3: ansible-lab-host-with-cool-name3
+host_vm_name1: ansible-lab-host1
+host_vm_name2: ansible-lab-host2
+host_vm_name3: ansible-lab-host3
