--- a/configuration.yml
+++ b/configuration.yml
@@ -20,7 +20,7 @@
       stig_version: rhel7
       security_enable_pwquality_password_set: yes
       security_password_max_lifetime_days: 90
-
+    tags: hardening
 - name: Configure DNS server
   hosts: ansible-lab-host1
   vars:
@@ -44,7 +44,7 @@
     ansible.builtin.lineinfile:
       path: /etc/hosts
       regexp: '^10\.1\.2\.6'
-      line: '10.1.2.6 c001-n@me3' 
+      line: '10.1.2.6 c001-n@me3'
   - name: Disable existing DNS
     ansible.builtin.service:
       name: systemd-resolved
