--- a/configuration.yml
+++ b/configuration.yml
@@ -43,7 +43,8 @@
       dnsmasq_expand_hosts: true
       dnsmasq_upstream_servers:
       - 1.1.1.1
-      - 1.0.0.1      
+      - 1.0.0.1
+      - 10.1.2.4      
   tasks:
   - name: Install dnsmasq
     ansible.builtin.package:
@@ -52,21 +53,18 @@
   - name: Set host1 name
     lineinfile:
       path: /etc/hosts
-      regexp: '^10\.1\.2\.4'
       line: '10.1.2.4 c001-n@me1'
   - name: set host2 name
     lineinfile:
       path: /etc/hosts
-      regexp: '^10\.1\.2\.5'
       line: '10.1.2.5 c001-n@me2'
   - name: set host3 name
     lineinfile:
       path: /etc/hosts
-      regexp: '^10\.1\.2\.6'
       line: '10.1.2.6 c001-n@me3'
   
   - name: Configure hosts to use local DNS
-  hosts: azure_lab
+  hosts: all
   vars:
     ansible_become: true
   tasks:
@@ -74,13 +72,17 @@
     lineinfile:
       path: /etc/resolv.conf
       regexp: '^nameserver'
-      line: 'nameserver 10.1.2.4'
+      line: 'nameserver=10.1.2.4'
 
-  - name: Disable existing DNS
+- name: Disable existing DNS
+  host: ansible-lab-host1
+  tasks:
+  - name: stop system resolved  
     ansible.builtin.service:
       name: systemd-resolved
       enabled: no
       state: stopped
+
   - name: Set dnsmasq configuration file
     ansible.builtin.copy:
       src: ./files/dnsmasq.conf
@@ -88,6 +90,7 @@
       owner: root
       group: root
       mode: '0644'
+
   - name: Restart dnsmasq
     ansible.builtin.service:
       name: dnsmasq
