--- a/inventory/inventory.yml
+++ b/inventory/inventory.yml
@@ -20,4 +20,5 @@ all:
               ansible_host: 10.1.1.4
     new_group:
       hosts:
+        ansible-lab-host1:
         ansible_host: 10.1.2.4
