--- a/dns.yml
+++ b/dns.yml
@@ -2,9 +2,12 @@
 - name: Ensure systemd-resolved running
   hosts: ansible-lab-host1
   become: yes
-  ansible.builtin.service:
-    name: systemd-resolved
-    state: started
+  tasks:
+  - name: start resolved
+    become: yes
+    ansible.builtin.service:
+      name: systemd-resolved
+      state: started
 
 - name: Configure DNS server
   hosts: ansible-lab-host1
