--- a/configuration.yml
+++ b/configuration.yml
@@ -11,7 +11,7 @@
       state: latest
 
 - name: Universal host configuration
-  hosts: ansible_lab_hosts
+  hosts: lab_hosts
   vars:
     ansible_become: true
   roles:
