--- a/vpnconfig.yml
+++ b/vpnconfig.yml
@@ -43,10 +43,7 @@
   - name: "Build the certificate authority"
     become: yes
     shell: >
-#      source vars;
-#      ./clean-all;
-#      yes "" |
-       ./build-ca;
+      ./build-ca
     args: 
       chdir: "{{ ansible_env.HOME }}/openvpn-ca/"
       executable: /bin/bash
