--- a/vpnconfig.yml
+++ b/vpnconfig.yml
@@ -40,6 +40,11 @@
       - { property: 'export KEY_CONFIG', value: '{{ ansible_env.HOME }}/openvpn-ca/openssl-1.0.0.cnf' }
       - { property: 'export KEY_DIR', value: '{{ ansible_env.HOME }}/openvpn-ca/keys' }
 
+  - name: "copy /usr/share/easy-rsa/ to /root/openvpn-ca/easy-rsa"
+    copy:
+      src: /usr/share/easy-rsa/
+      dest: /root/openvpn-ca/easy-rsa
+
   - name: "Build the certificate authority"
     become: yes
     shell: >
