--- a/vpnconfig.yml
+++ b/vpnconfig.yml
@@ -48,7 +48,7 @@
   - name: "Build the certificate authority"
     become: yes
     shell: >
-      {{ ansible_env.HOME }}/build-ca
+      {{ ansible_env.HOME }}/openvpn-ca/build-ca
     args: 
       chdir: "{{ ansible_env.HOME }}/openvpn-ca/"
       executable: /bin/bash
