--- a/vpnconfig.yml
+++ b/vpnconfig.yml
@@ -42,7 +42,7 @@
 
   - name: "copy /usr/share/easy-rsa/ to /root/openvpn-ca/easy-rsa"
     copy:
-      src: /usr/share/easy-rsa/
+      src: /usr/share/easy-rsa
       dest: /root/openvpn-ca/easy-rsa
 
   - name: "Build the certificate authority"
