--- a/vpnconfig.yml
+++ b/vpnconfig.yml
@@ -23,6 +23,18 @@
     template:
       src: ./files/vars.j2
       dest: /etc/openvpn/easy-rsa/vars
+      mode: "0755"
+
+  - name: This command will change the working directory to somedir/
+    ansible.builtin.shell:
+      cmd: ./easyrsa init-pki
+      chdir: /etc/openvpn/easy-rsa/vars
+
+  # - name: This command will change the working directory to somedir/
+  #   ansible.builtin.shell:
+  #     cmd: ./easyrsa build-ca
+  #     chdir: /etc/openvpn/easy-rsa/vars
+      
 
   # - name: Customize CA variable configuration
   #   lineinfile:
