--- a/vpnconfig.yml
+++ b/vpnconfig.yml
@@ -29,6 +29,7 @@
     shell: ./easyrsa init-pki
     args:
       chdir: /etc/openvpn/easy-rsa/
+    tags: init
 
   - name: change the working directory to somedir/2
     shell: ./easyrsa build-ca
