add vpn into config

--- a/configuration.yml
+++ b/configuration.yml
@@ -65,3 +65,13 @@
       path: /mnt/smbshare
       state: directory
       mode: '0777'
+
+  - name: Install OpenVPN
+  hosts: ansible-lab-controller
+  gather_facts: true
+  vars:
+    ansible_become: true
+    openvpn_server_hostname: 13.91.99.162
+  roles:
+    - role: ansible-role-openvpn
+      clients: client1
