--- a/configuration.yml
+++ b/configuration.yml
@@ -36,6 +36,7 @@
     ansible_become: true
   roles:
   - bertvv.samba
+  tags: init
 
 - name: Configure Samba client
   hosts: ansible-lab-host3
@@ -65,6 +66,7 @@
       path: /mnt/smbshare
       state: directory
       mode: '0777'
+  tags: init
 
   - name: Install OpenVPN
   hosts: ansible-lab-controller
