--- a/webconfig.yml
+++ b/webconfig.yml
@@ -1,8 +1,8 @@
 ---
-- hosts: ansible-lab-host3
-  tasks:
-    - name: run echo command
-      command: /bin/echo hello world
+# - hosts: ansible-lab-host3
+#   tasks:
+#     - name: run echo command
+#       command: /bin/echo hello world
 
 - hosts: ansible-lab-host3
   sudo: yes
