fix sudo to become

--- a/webconfig.yml
+++ b/webconfig.yml
@@ -1,6 +1,6 @@
 ---
 - hosts: ansible-lab-host3
-  sudo: yes
+  become: true
   tasks:
     - name: install apache2
       apt: name=apache2 update_cache=yes state=latest
