--- a/webconfig.yml
+++ b/webconfig.yml
@@ -1,8 +1,8 @@
 ---
 - hosts: ansible-lab-host3
   become: true
-  vars:
-         - vars/default.yml
+  # vars:
+  #        - vars/default.yml
 - tasks:
     - name: Install latest version of Apache
       apt: name=apache2 update_cache=yes state=latest
