--- a/webconfig.yml
+++ b/webconfig.yml
@@ -2,9 +2,7 @@
 - hosts: ansible-lab-host3
   become: true
   vars:
-    http_host: "mydomain.local"
-    http_conf: "my_domain.conf"
-    http_port: "80"
+    - vars/default.yml
 - tasks:
     - name: Install latest version of Apache
       apt: name=apache2 update_cache=yes state=latest
